--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@better-scroll/core": "^2.2.1",
+    "@better-scroll/pull-up": "^2.2.1",
+    "axios": "^0.21.1",
+    "better-scroll": "^1.13.2",
     "core-js": "^3.10.0",
-    "vue": "^2.6.12"
+    "vue": "^2.6.12",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.12",
